src/Beastiepedia/Info/ResearchCarousel.module.css
.container {
  display: flex;
  flex-direction: column;
  max-width: 100%;
}

.curtains {
  overflow: hidden;
  max-width: 100%;
  width: 600px;
  height: 300px;
}

.stage {
  height: 100%;
  position: relative;
  display: flex;
  transition: 500ms transform;
}

.stage > img {
  min-height: 100%;
  max-width: 100%;
  aspect-ratio: 2 / 1;
  object-fit: contain;
  float: left;
  cursor: pointer;
}

.controls {
  width: 100%;
  display: flex;
  justify-content: center;
  gap: 10px;
  font-size: 1.2em;
}

.big {
  height: 80vh;
  height: 80dvh;
  width: calc(85vw - 44px);
  width: calc(85dvw - 44px);
  align-items: center;
  overflow: scroll;
  margin-bottom: 16px;
  background-color: rgba(1, 1, 1, 0.1);
}

.bigimage {
  display: block;
  object-fit: contain;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.biggerimage {
  display: block;
  width: 100%;
  height: auto;
  cursor: pointer;
}

@media all and (max-aspect-ratio: 1/1) {
  .biggerimage {
    width: auto;
    height: 100%;
  }
}

